# wellness

./: .gitignore  pyproject.toml
data/: journal.txt  limits.txt
src/wellness/: crew.py  main.py
src/wellness/config/: agents.yaml  tasks.yaml
