[tool.poetry]
name = "wellness"
version = "0.1.0"
description = "wellness concierge"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }
crewai-tools = "^0.4.6"
pip = "^24.1.1"
#install = "^1.3.5"
langchain-groq = "^0.1.6"
langchain-community = "^0.2.10"

[tool.poetry.scripts]
strength = "wellness.main:run_strength"
cardio = "wellness.main:run_cardio"
pt = "wellness.main:run_pt"
motivation = "wellness.main:run_motivation"
day = "wellness.main:run_day"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
